--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "i": "^0.3.5",
-    "mongoose": "^4.11.1"
+    "mongoose": "^4.11.1",
+    "rand-token": "^0.3.0"
   }
 }
