--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "crypto": "0.0.3",
     "dotenv": "^4.0.0",
+    "email-validator": "^1.0.7",
     "express": "^4.15.3",
     "i": "^0.3.5",
     "mongoose": "^4.11.1",
