--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "1.0.2",
     "body-parser": "^1.17.2",
     "crypto": "0.0.3",
     "dotenv": "^4.0.0",
