--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "8.1.3"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "1.0.2",
     "body-parser": "^1.17.2",
+    "cors": "2.8.4",
     "crypto": "0.0.3",
     "dotenv": "^4.0.0",
     "email-validator": "^1.0.7",
